fixed datepicker button alignment

--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -83,6 +83,6 @@ li{
     display: block;
 }
 
-.datepicker button {
+.datepicker .calendarButton {
     margin-top: -1em;
 }
